--- a/src/modules/cat-shop/cat-shop.scss
+++ b/src/modules/cat-shop/cat-shop.scss
@@ -143,7 +143,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: flex-start;
+      align-items: center;
 
       position: relative;
 
@@ -212,7 +212,11 @@
         top: 2.8rem;
         right: 2.5rem;
 
-        transition: fill 0.25s;
+        opacity: 1;
+
+        background: transparent;
+
+        transition: all 0.25s;
 
         svg {
           fill: rgba(255, 255, 255, 0.5);
